tests/invalid/compare_ordered_incompatible_types/main.py
def main() -> None:
    x: bool = 1 < "2"
